force-app/main/default/objects/Pokemon_Roster__c/Pokemon_Roster__c.object-meta.xml
<CustomObject>
    <label>Pokemon Roster</label>
    <nameField>
        <label>Pokemon Roster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokemon Rosters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>