force-app/main/default/objects/Pokemon_Roster__c/fields/Move_1__c.field-meta.xml
<CustomField>
    <fullName>Move_1__c</fullName>
    <formula>Pokemon__r.Move_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Move 1</label>
    <type>Text</type>
</CustomField>