force-app/main/default/objects/Pokemon_Roster__c/fields/Move_2__c.field-meta.xml
<CustomField>
    <fullName>Move_2__c</fullName>
    <formula>Pokemon__r.Move_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Move 2</label>
    <type>Text</type>
</CustomField>