force-app/main/default/objects/Pokemon_Roster__c/fields/Move_3__c.field-meta.xml
<CustomField>
    <fullName>Move_3__c</fullName>
    <formula>Pokemon__r.Move_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Move 3</label>
    <type>Text</type>
</CustomField>