force-app/main/default/objects/Pokemon_Roster__c/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pokemon</label>
    <referenceTo>Pokemon__c</referenceTo>
    <relationshipLabel>Pokemon Rosters</relationshipLabel>
    <relationshipName>Pokemon_Rosters</relationshipName>
    <type>Lookup</type>
</CustomField>