force-app/main/default/objects/Pokemon_Roster__c/fields/Sprite__c.field-meta.xml
<CustomField>
    <fullName>Sprite__c</fullName>
    <formula>IMAGE(Pokemon__r.SpriteURLField__c ,  &apos;No Image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprite</label>
    <type>Text</type>
</CustomField>